--- a/css/loading-screen.css
+++ b/css/loading-screen.css
@@ -35,7 +35,7 @@
 }
 
 .counter {
-    color: #fff;
+    color: #000;
     font-size: 5em;
     font-weight: 700;
     z-index: 1;
@@ -43,7 +43,7 @@
 }
 
 .loading-text {
-    color: #fff;
+    color: #000;
     font-size: 1.2em;
     text-align: center;
 }
