--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ html, body {
     cursor: url('cursor.png') 4 4, auto;
     cursor: url('pointer.png'), pointer;
 }
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom, #f0f9ff, #cce7ff);
+    }
 /* Header */
 header {
     display: flex;
@@ -192,23 +196,18 @@ embed {
     top: 0;
     left: 0;
 }
-    body {
-      height: 2000px; /* Just to make the page scrollable */
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #f0f9ff, #cce7ff);
-    }
 
     /* Floating button */
     #toTopBtn {
       position: fixed;   /* stays in place even when scrolling */
       bottom: 20px;      /* distance from bottom */
-      right: 20px;       /* distance from right */
+      right: 5px;       /* distance from right */
       display: none;     /* hidden by default */
       padding: 12px 16px;
       font-size: 16px;
       border: none;
-      border-radius: 50%; /* round button */
-      background: #0077ff;
+      border-radius: 20%; /* round button */
+      background: #5865f2;
       color: white;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
@@ -216,7 +215,7 @@ embed {
     }
 
     #toTopBtn:hover {
-      background: #005fcc;
+      background: #5865f2;
     }
 /* Footer */
 footer {
