--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,10 @@ html, body {
   z-index: 9999; /* stay on top */
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);
 }
-
+.dashboard-menu {
+  display: none;
+  flex-direction: column;
+}
 .dashboard-menu a {
   padding: 12px 16px;
   color: white;
